--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div class="container">
-  <!-- <app-navigation></app-navigation> -->
-  <button class="user-profile-link" (click)="goToUserProfile()">
-    <span class="user-icon-link fas fa-user"></span>
-  </button>
-
+  <app-navigation></app-navigation>
+  
   <router-outlet></router-outlet>
 </div>
