Temp commit, partially tags implementation

--- a/src/app/components/news/news-item/news-item.component.html
+++ b/src/app/components/news/news-item/news-item.component.html
@@ -1,6 +1,10 @@
-<h3 class="news__subject">
+<div class="news_tags">
+  {{iteratedNews.tags}}
+</div>
+
+<h5 class="news__subject">
   {{iteratedNews.subject | uppercase}}
-</h3>
+</h5>
 
 <main class="news__content">
   {{iteratedNews.content}}
