--- a/src/app/components/news/news-list/news-list.component.html
+++ b/src/app/components/news/news-list/news-list.component.html
@@ -7,6 +7,12 @@
       <input type="text" class="search-news-input" id="search-news" (input)="searchNews($event)" placeholder="search">
     </form>
   </div>
+
+  <ul class="all-tags row" *ngFor="let tag of getTags(); let i = index">
+    <li class="single-tag" id="{{i}}">
+      <button>{{tag}}</button>
+    </li>
+  </ul>
 </div>
 
 <div class="row">
