--- a/src/app/components/news/news-item/news-item.component.html
+++ b/src/app/components/news/news-item/news-item.component.html
@@ -1,3 +1,7 @@
+<div class="news_photo" *ngIf="iteratedNews.photo">
+  <img src="{{iteratedNews.photo}}" alt="">
+</div>
+
 <div class="news_tags">
   {{iteratedNews.tags}}
 </div>
