--- a/src/app/components/user/edit-profile-window/edit-profile-window.component.html
+++ b/src/app/components/user/edit-profile-window/edit-profile-window.component.html
@@ -29,5 +29,5 @@
   </div>
 </ng-template>
 
-<button class="btn btn-outline-primary mb-2 mr-2" (click)="open(content)">Edit profile</button>
+<button class="btn btn-outline-danger" (click)="open(content)">Edit profile</button>
 
