--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-navigation></app-navigation>
+  <app-navigation class="navigation"></app-navigation>
   
   <router-outlet></router-outlet>
 </div>
