--- a/src/app/components/news/news-item/news-item.component.css
+++ b/src/app/components/news/news-item/news-item.component.css
@@ -11,6 +11,14 @@
 
 }
 
+.news_photo {
+  width: inherit;
+}
+
+.news_photo > img {
+  width: 100%;
+}
+
 .author {
   display: flex;
   justify-content: flex-start;
