--- a/src/app/components/news/news-list/news-list.component.css
+++ b/src/app/components/news/news-list/news-list.component.css
@@ -1,3 +1,14 @@
+.newslist-component {
+  display: block;
+}
+
+.news-search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
 .main-title {
 
 }
@@ -11,5 +22,13 @@
 }
 
 .news {
+  display: block;
+  padding-bottom: 10px;
+  border: 1px solid deepskyblue;
 
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+
+  padding: 5px;
 }
