--- a/src/app/components/news/search-selection/search-selection.component.html
+++ b/src/app/components/news/search-selection/search-selection.component.html
@@ -1,6 +1,6 @@
 <label for="optionsSelect"> Filter by: </label>
 
-<select  id="optionsSelect" name="optionsToFilter" [(ngModel)]="selectedOption" (ngModelChange)="printSelectedOption()">
+<select  id="optionsSelect" name="optionsToFilter" class="selectpicker selectpickermy" [(ngModel)]="selectedOption" (ngModelChange)="printSelectedOption()">
   <option [ngValue]="0">default</option>
   <option *ngFor="let selection of selectOptions" [ngValue]="selection">{{selection.value}}</option>
 </select>
