--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -7,16 +7,15 @@
 </main>
 
 <!--<div class="user-profile-wrapper" *ngIf="userPosts">-->
-  <ul class="user__posts list-group">
+  <ul class="user__posts">
     <li class="user-post"
         [ngClass]="{'active': selectedItem == post}"
         *ngFor="let post of userPosts; let i = index" id="{{i}}">
 
       <div class="plain-post">
+        <img src="{{ post.photo }}" alt="Here should be image">
         <h4 class="user-post__subject">{{ post.subject }}</h4>
         <main class="user-post__content">{{ post.content }}</main>
-
-        <img src="{{ post.photo }}" alt="Here should be image">
       </div>
     </li>
   </ul>
@@ -25,7 +24,7 @@
 <nav class="navigation">
   <ul>
     <li class="navigation-back">
-      <button class="navigation-back-button" (click)="gotoNewsList()">Back to news</button>
+      <button class="navigation-back-button btn btn-outline-secondary" (click)="gotoNewsList()">Back to news</button>
     </li>
   </ul>
 </nav>
