--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -37,7 +37,7 @@
     <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
     <div *ngIf="submitted && form.password_confirmation.errors" class="invalid-feedback">
       <div *ngIf="form.password_confirmation.errors.required">Password is required</div>
-      <div *ngIf="form.password_confirmation.pristine && submitted">Password mismatch</div>
+      <!--<div *ngIf="form.password_confirmation.pristine && submitted">Password mismatch</div>-->
     </div>
   </div>
   <div class="form-group">
