--- a/src/app/components/news/news-item/news-item.component.html
+++ b/src/app/components/news/news-item/news-item.component.html
@@ -2,7 +2,7 @@
   <img src="{{iteratedNews.photo}}" alt="">
 </div>
 
-<div class="news_tags">
+<div class="news_tags tags">
   {{iteratedNews.tags}}
 </div>
 
