--- a/src/app/components/user/user-profile/user-profile.component.html
+++ b/src/app/components/user/user-profile/user-profile.component.html
@@ -17,6 +17,8 @@
         <h4 class="user-post__subject">{{ post.subject }}</h4>
         <main class="user-post__content">{{ post.content }}</main>
       </div>
+
+      <div class="tags"></div>
     </li>
   </ul>
 <!--</div>-->
