--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -3,14 +3,14 @@
     <label>First name</label>
     <input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.first_name.errors }" />
     <div *ngIf="submitted && form.first_name.errors" class="invalid-feedback">
-      <div *ngIf="form.first_name.errors.required">Empty first name field</div>
+      <div *ngIf="form.first_name.errors.required || !form.first_name.trim()">Empty first name field</div>
     </div>
   </div>
   <div class="form-group">
     <label>Second name</label>
     <input type="text" formControlName="second_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.second_name.errors }" />
     <div *ngIf="submitted && form.second_name.errors" class="invalid-feedback">
-      <div *ngIf="form.second_name.errors.required">Empty second name field</div>
+      <div *ngIf="form.second_name.errors.required || !form.second_name.trim()">Empty second name field</div>
     </div>
   </div>
   <div class="form-group">
@@ -22,22 +22,21 @@
     <input type="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.email.errors }" />
     <div *ngIf="submitted && form.email.errors" class="invalid-feedback">
       <div *ngIf="form.email.errors.required">Email is required</div>
-      <div *ngIf="form.email.errors.email">Email must be a valid email address</div>
+      <div *ngIf="form.email.errors.email || !form.email.trim()">Email must be a valid email address</div>
     </div>
   </div>
   <div class="form-group">
     <label>Password</label>
     <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password.errors }" />
     <div *ngIf="submitted && form.password.errors" class="invalid-feedback">
-      <div *ngIf="form.password.errors.required">Password is required</div>
+      <div *ngIf="form.password.errors.required || !form.password.trim()">Password is required</div>
     </div>
   </div>
   <div class="form-group">
     <label>Confirm password</label>
     <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.password_confirmation.errors }" />
     <div *ngIf="submitted && form.password_confirmation.errors" class="invalid-feedback">
-      <div *ngIf="form.password_confirmation.errors.required">Password is required</div>
-      <!--<div *ngIf="form.password_confirmation.pristine && submitted">Password mismatch</div>-->
+      <div *ngIf="form.password_confirmation.errors.required || !form.password_confirmation.trim()">Password is required</div>
     </div>
   </div>
   <div class="form-group">
