--- a/src/app/components/news/news-item/news-item.component.css
+++ b/src/app/components/news/news-item/news-item.component.css
@@ -13,10 +13,16 @@
 
 .news_photo {
   width: inherit;
+  overflow:hidden; /*hide bounds of image */
+  margin:0;
 }
 
 .news_photo > img {
-  width: 100%;
+  /*width: 100%;*/
+  display:block; /*remove inline-block spaces*/
+   width:100%;
+   height: auto;
+   overflow: hidden;
 }
 
 .author {
@@ -29,11 +35,11 @@
   display: flex;
   justify-content: center;
 
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
   position: relative;
   overflow: hidden;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
 }
 
 .author__photo {
