--- a/src/app/components/news/news-list/news-list.component.css
+++ b/src/app/components/news/news-list/news-list.component.css
@@ -24,16 +24,23 @@
 .news {
   display: block;
   padding-bottom: 10px;
-  border: 1px solid deepskyblue;
 
   display: flex;
   flex-direction: column;
   align-items: left;
 
-  padding: 5px;
+  padding: 30px;
+
+  width: 100%;
+  /*height: 200px;*/
+  background-color: lightgray;
 }
 
 .news-list {
   display: flex;
   align-items: center;
+}
+
+.search-news-input {
+  width:70%;
 }
