--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -4,7 +4,7 @@
     <input type="text" formControlName="first_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.first_name.errors }" />
     <div *ngIf="submitted && form.first_name.errors" class="invalid-feedback">
       <div *ngIf="form.first_name.errors.required">Empty first name field</div>
-      <div *ngIf="name.errors.forbiddenTrimmedValue">First name should not be empty after trim</div>
+      <div *ngIf="form.first_name.errors.validateTrimmed">First name should not be empty after trim</div>
     </div>
   </div>
   <div class="form-group">
@@ -12,7 +12,7 @@
     <input type="text" formControlName="second_name" class="form-control" [ngClass]="{ 'is-invalid': submitted && form.second_name.errors }" />
     <div *ngIf="submitted && form.second_name.errors" class="invalid-feedback">
       <div *ngIf="form.second_name.errors.required">Empty second name field</div>
-      <div *ngIf="name.errors.forbiddenTrimmedValue">Second name should not be empty after trim</div>
+      <div *ngIf="form.second_name.errors.validateTrimmed">Second name should not be empty after trim</div>
     </div>
   </div>
   <div class="form-group">
